--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="profile-photo.jpg" alt="Justin Hartford" class="profile-photo" id="profileImg">
+        <img src="profile-photo.jpg.png" alt="Justin Hartford" class="profile-photo" id="profileImg">
         
         <h1>Hi, I'm Justin Hartford</h1>
         
