Added company logos

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
             
             <div class="company-node" data-company="spring">
                 <div class="company-logo">
-                    <img src="https://logo.clearbit.com/springhealth.com" alt="Spring Health" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22%3E%3Ctext y=%2250%22 font-size=%2240%22%3ESH%3C/text%3E%3C/svg%3E'">
+                    <img src="portfolio-images/spring-logo.png" alt="Spring Health">
                 </div>
                 <span class="company-name">Spring Health</span>
                 <span class="year">2025</span>
@@ -27,7 +27,7 @@
 
             <div class="company-node" data-company="grammarly">
                 <div class="company-logo">
-                    <img src="https://logo.clearbit.com/grammarly.com" alt="Grammarly" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22%3E%3Ctext y=%2250%22 font-size=%2240%22%3EG%3C/text%3E%3C/svg%3E'">
+                    <img src="portfolio-images/grammarly-logo.png" alt="Grammarly">
                 </div>
                 <span class="company-name">Grammarly</span>
                 <span class="year">2024</span>
@@ -35,7 +35,7 @@
 
             <div class="company-node" data-company="cfi">
                 <div class="company-logo">
-                    <img src="https://logo.clearbit.com/corporatefinanceinstitute.com" alt="CFI" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22%3E%3Ctext y=%2250%22 font-size=%2240%22%3ECFI%3C/text%3E%3C/svg%3E'">
+                    <img src="portfolio-images/cfi-logo.png" alt="CFI">
                 </div>
                 <span class="company-name">CFI</span>
                 <span class="year">2023</span>
@@ -43,7 +43,7 @@
 
             <div class="company-node" data-company="amperity">
                 <div class="company-logo">
-                    <img src="https://logo.clearbit.com/amperity.com" alt="Amperity" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22%3E%3Ctext y=%2250%22 font-size=%2240%22%3EA%3C/text%3E%3C/svg%3E'">
+                    <img src="portfolio-images/amperity-logo.png" alt="Amperity">
                 </div>
                 <span class="company-name">Amperity</span>
                 <span class="year">2020</span>
@@ -51,7 +51,7 @@
 
             <div class="company-node" data-company="pushpay">
                 <div class="company-logo">
-                    <img src="https://logo.clearbit.com/pushpay.com" alt="Pushpay" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22%3E%3Ctext y=%2250%22 font-size=%2240%22%3EP%3C/text%3E%3C/svg%3E'">
+                    <img src="portfolio-images/pushpay-logo.png" alt="Pushpay">
                 </div>
                 <span class="company-name">Pushpay</span>
                 <span class="year">2016</span>
